crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__village_rites_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Draw",
        "count": {
          "type": "Fixed",
          "value": 2
        },
        "target": {
          "type": "Controller"
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Draw two cards.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [],
  "additionalCost": {
    "type": "Required",
    "data": {
      "type": "Sacrifice",
      "target": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": null,
        "properties": []
      },
      "count": 1
    }
  }
}
