crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__walking_ballista_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 585
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "PutCounter",
        "counter_type": "P1P1",
        "count": {
          "type": "Fixed",
          "value": 1
        },
        "target": {
          "type": "SelfRef"
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 4
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "{4}: Put a +1/+1 counter on ~.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 1
        },
        "target": {
          "type": "Any"
        }
      },
      "cost": {
        "type": "RemoveCounter",
        "count": 1,
        "counter_type": {
          "type": "OfType",
          "data": "P1P1"
        },
        "target": null,
        "selection": "SingleObject"
      },
      "sub_ability": null,
      "duration": null,
      "description": "Remove a +1/+1 counter from ~: It deals 1 damage to any target.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [
    {
      "event": "Moved",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "PutCounter",
          "counter_type": "P1P1",
          "count": {
            "type": "Ref",
            "qty": {
              "type": "CostXPaid"
            }
          },
          "target": {
            "type": "SelfRef"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "mode": {
        "type": "Mandatory"
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "description": "~ enters with X +1/+1 counters on it.",
      "condition": null
    }
  ],
  "extractedKeywords": []
}
