crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__wizard_class_two_layer_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 1348
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 55,
          "end_byte": 85,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "You have no maximum hand size."
      },
      "node": {
        "PreLoweredStatic": {
          "mode": "NoMaximumHandSize",
          "affected": {
            "type": "Typed",
            "type_filters": [],
            "controller": "You",
            "properties": []
          },
          "modifications": [],
          "condition": null,
          "affected_zone": null,
          "effect_zone": null,
          "active_zones": [],
          "characteristic_defining": false,
          "description": "You have no maximum hand size."
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 86,
          "end_byte": 101,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{2}{U}: Level 2"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 2
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Blue"
              ],
              "generic": 2
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{2}{U}: Level 2",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 1
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 102,
          "end_byte": 141,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ becomes level 2, draw two cards."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "ClassLevelGained",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "Draw",
              "count": {
                "type": "Fixed",
                "value": 2
              },
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "When ~ becomes level 2",
          "constraint": {
            "type": "AtClassLevel",
            "level": 2
          },
          "condition": null,
          "batched": false
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 142,
          "end_byte": 157,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{4}{U}: Level 3"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 3
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Blue"
              ],
              "generic": 4
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{4}{U}: Level 3",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 2
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 4,
      "source": {
        "id": {
          "item": 4,
          "ordinal": 0
        },
        "span": {
          "first_line": 5,
          "last_line": 5,
          "start_byte": 158,
          "end_byte": 235,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever you draw a card, put a +1/+1 counter on target creature you control."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Drawn",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "PutCounter",
              "counter_type": "P1P1",
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "target": {
                "type": "Typed",
                "type_filters": [
                  "Creature"
                ],
                "controller": "You",
                "properties": []
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": null,
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": {
            "type": "Controller"
          },
          "valid_source": null,
          "description": "Whenever you draw a card, put a +1/+1 counter on target creature you control.",
          "constraint": null,
          "condition": {
            "type": "ClassLevelGE",
            "level": 3
          },
          "batched": false
        }
      }
    }
  ],
  "source_text": "(Gain the next level as a sorcery to add its ability.)\nYou have no maximum hand size.\n{2}{U}: Level 2\nWhen this Class becomes level 2, draw two cards.\n{4}{U}: Level 3\nWhenever you draw a card, put a +1/+1 counter on target creature you control.",
  "card_name": "Wizard Class"
}
